@@ -26,7 +26,7 @@
 		<property name="javadoc.link" value="http://java.sun.com/j2se/1.3/docs/api/"/>
 		<property name="major.version" value="0"/>
 		<property name="minor.version" value="1"/>
-		<property name="build.version" value="73"/>
+		<property name="build.version" value="74"/>
 		<property name="app.version" value="${major.version}.${minor.version}.${build.version}"/>
 		<property name="app_version" value="${major.version}_${minor.version}_${build.version}"/>
 		<property name="distbin.dir" value="${build.dir}/${app.name}-${app_version}-bin"/>
