@@ -219,11 +219,16 @@ public class jsXe {
             extentionList = new ArrayList();
             extentionList.add(new String("fo"));
             loadDialog.addChoosableFileFilter(new CustomFileFilter(extentionList, "XSL:FO Documents"));
+            //Add a filter to display only Schema files
+            extentionList = new ArrayList();
+            extentionList.add(new String("xsd"));
+            loadDialog.addChoosableFileFilter(new CustomFileFilter(extentionList, "XML Schema"));
             //Add a filter to display all formats
             extentionList = new ArrayList();
             extentionList.add(new String("xml"));
             extentionList.add(new String("xsl"));
             extentionList.add(new String("fo"));
+            extentionList.add(new String("xsd"));
             loadDialog.addChoosableFileFilter(new CustomFileFilter(extentionList, "All XML Documents"));
             
             //The "All Files" file filter is added to the dialog
